# CRepo

LearningC/: CMakeLists.txt  main.c
LearningC/Basics/: CBasics.c  CBasics.h  CVariables.c  CVariables.h  DataTypes.c  DataTypes.h  PrintFBasics.c  PrintFBasics.h  ScanFBasics.c  ScanFBasics.h
LearningC/DataStructure/: linkedlist.c  linkedlist.h
LearningC/FileSystem/: BasicReadWriteFile.c  ReadWriteFile.h
LearningC/MemoryManagement/: AllocatingMemory.c  AllocatingMemory.h
LearningC/Pointers/: BasicPointers.c  BasicPointers.h  ConstAndPointer.c  ConstAndPointer.h  GenericPointer.c  GenericPointer.h  PointerToFunction.c  PointerToFunction.h  PointersAndArray.c  PointersAndArray.h
